# blender_cli

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/blender_cli/: __init__.py  __init__.pyi  blenvy.py  blenvy_registry.py  constants.py  types.py
src/blender_cli/alignment/: __init__.py  _fal.py  depth.py  generation.py  integration.py  pipeline.py  pose.py  types.py  viz.py
src/blender_cli/animation/: __init__.py  codegen.py  keyframes.py
src/blender_cli/assets/: __init__.py  image.py  material.py  prefab.py  registry.py
src/blender_cli/cli/: __init__.py  __main__.py  common.py  main.py  repl.py
src/blender_cli/cli/commands/: __init__.py  align.py  anchor_cmd.py  animation_cmd.py  assets.py  blenvy_cmd.py  camera_cmd.py  candidates.py  inspect.py  instance_cmd.py  manifest.py  material_cmd.py  measure.py  modifier_cmd.py  op.py  (+12 more)
src/blender_cli/core/: __init__.py  diagnostics.py  metadata.py
src/blender_cli/geometry/: __init__.py  _erosion.py  field2d.py  heightfield.py  mask.py  pointset.py  spline.py  spline_ops.py
src/blender_cli/modifiers/: __init__.py  codegen.py  modifier.py  registry.py
src/blender_cli/project/: __init__.py  project_file.py  session.py
src/blender_cli/render/: __init__.py  camera.py  camera_path.py  context.py  settings.py  world.py
src/blender_cli/scene/: __init__.py  anchor.py  entity.py  instances.py  primitives.py  scene.py  selection.py
src/blender_cli/snap/: __init__.py  axis.py  objects.py  results.py
src/blender_cli/utils/: __init__.py  placement.py  spline_strip.py  strings.py  sweep.py
